syntax = "proto3";

package pb;
option go_package = "./pb";

message UploadFileRequest {
  bytes chunk = 1;
}

message UploadFileResponse {
  string file_id = 1;
}

service Rpc {
  rpc UploadFile (stream UploadFileRequest) returns (UploadFileResponse);
}